--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,12 @@
 <% if @connected_to_evernote %>
   <div>You are connected to Evernote</div>
-  <a href='/recipes'>See your recipes</a>
+  <a href='/recipes'>See recipes in your Evernote account</a>
   <a href='/logout'>Unlink Evernote</a>
+  <hr/>
+  <h4>Some recipes not in your Evernote account</h4>
+  <% @non_evernote_recipes.each do |r| %>
+    <div><a href="/recipe/<%= r.id %>"><%= r.title %></a></div>
+  <% end %>
 <% else %>
   <a href='/temp_auth'>Connect to Evernote</a>
 <% end %>
